[gd_scene load_steps=8 format=3 uid="uid://epbpu3b0iqp8"]

[ext_resource type="Script" path="res://Scripts/Menus/options.gd" id="1_0huni"]
[ext_resource type="Texture2D" uid="uid://b0v6ruek68vg0" path="res://Art/castillo epico.png" id="2_wl57d"]
[ext_resource type="AudioStream" uid="uid://cdow2sg32nws1" path="res://Resources/Sounds/select_button.wav" id="3_peukv"]
[ext_resource type="AudioStream" uid="uid://dbiepvce32swk" path="res://Resources/Sounds/Ambient 3.mp3" id="4_myxrx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1uv0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfky4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yr6p8"]
bg_color = Color(0, 0, 0, 1)

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0huni")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wl57d")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -153.5
offset_right = 240.0
offset_bottom = 153.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="btn_volume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_d1uv0")
text = "VOLUMEN"

[node name="btn_resolution" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_mfky4")
text = "RESOLUCIÃ“N"

[node name="btn_back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_yr6p8")
text = "ATRAS"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_peukv")
volume_db = 8.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_myxrx")

[connection signal="pressed" from="VBoxContainer/btn_volume" to="." method="_on_btn_volume_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_resolution" to="." method="_on_btn_resolution_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_back" to="." method="_on_btn_back_pressed"]
